corpus/main.txt
================================================================================
Arrays
================================================================================

[
  345,
  10.1,
  10,
  -10,
  null,
  true,
  false,
  { "stuff": "good" }
]

--------------------------------------------------------------------------------

(document
  (array
    (number)
    (number)
    (number)
    (number)
    (null)
    (true)
    (false)
    (object
      (pair
        (string
          (string_content))
        (string
          (string_content))))))

================================================================================
String content
================================================================================

[
  "",
  "abc",
  "def\n",
  "ghi\t",
  "jkl\f",
  "//",
  "/**/"
]

--------------------------------------------------------------------------------

(document
  (array
    (string)
    (string
      (string_content))
    (string
      (string_content
        (escape_sequence)))
    (string
      (string_content
        (escape_sequence)))
    (string
      (string_content
        (escape_sequence)))
    (string
      (string_content))
    (string
      (string_content))))

================================================================================
Top-level numbers
================================================================================

-1

--------------------------------------------------------------------------------

(document
  (number))

================================================================================
Top-level null
================================================================================

null

--------------------------------------------------------------------------------

(document
  (null))

================================================================================
Prefix Array
================================================================================

[1, 2, 3

--------------------------------------------------------------------------------

(document
  (prefix_array (number) (number) (number)))

================================================================================
Prefix Array (One element)
================================================================================

[1

--------------------------------------------------------------------------------

(document
  (prefix_array (number)))

================================================================================
Prefix Array (Trailing Comma)
================================================================================

[1, 2, 3,

--------------------------------------------------------------------------------

(document
  (prefix_array (number) (number) (number) (trailing_comma)))

================================================================================
Prefix Array (Invalid)
================================================================================

[1, 2, ]

--------------------------------------------------------------------------------

(document
  (array (number) (number) (MISSING number)))


================================================================================
Prefix Number
================================================================================

1e

--------------------------------------------------------------------------------

(document
  (prefix_number))

================================================================================
Prefix Number (Invalid)
================================================================================

1a

--------------------------------------------------------------------------------

(document
  (number)
  (ERROR
    (UNEXPECTED 'a')))

================================================================================
Prefix Object
================================================================================

{ "a":

--------------------------------------------------------------------------------

(document
  (prefix_object
    (prefix_pair
      (string
        (string_content)))))

================================================================================
Prefix Object (Trailing Comma)
================================================================================

{ "a": "b",

--------------------------------------------------------------------------------

(document
  (prefix_object
    (pair
      (string
        (string_content))
      (string
        (string_content)))
    (trailing_comma)))

================================================================================
Prefix Object (Trailing Comma)
================================================================================

{ "a": "b", "c": "d",

--------------------------------------------------------------------------------

(document
  (prefix_object
    (pair
      (string
        (string_content))
      (string
        (string_content)))
    (pair
      (string
        (string_content))
      (string
        (string_content)))
    (trailing_comma)))

================================================================================
Prefix String
================================================================================

"a

--------------------------------------------------------------------------------

(document
  (prefix_string (string_content)))
